css/styles.css
/* ... */
.ui-toggler {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-justify-content: space-between;
            justify-content: space-between;
    overflow: hidden;
    border: 1px solid #E0E4EC;
    border-radius: 4px;
    -webkit-box-pack: justify;
        -ms-flex-pack: justify;
}
.ui-toggler input {
    position: absolute;
    top: 0;
    left: 0;
    display: none;
    width: 0.1em;
    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
    opacity: 0;
}
.ui-toggler input + label {
    display: inline-block;
    -webkit-flex: 1 1 auto;
        -ms-flex: 1 1 auto;
            flex: 1 1 auto;
    padding: 12px 10px;
    background: -webkit-gradient(linear, left top, left bottom, from(#FFFFFF), to(#E9EEF7));
    background: -webkit-linear-gradient(top, #FFFFFF, #E9EEF7);
    background: linear-gradient(to bottom, #FFFFFF, #E9EEF7);
    color: #666C77;
    text-align: center;
    font-size: 11px;
    font-family: 'CoreSansA55';
    cursor: pointer;
    -webkit-box-flex: 1;
}
.ui-toggler input:checked + label {
    background: #666C77;
    -webkit-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.54);
            box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.54);
    color: white;
}
/* buttons */
.btn {
    display: inline-block;
    padding: 13px 30px 10px 30px;
    font-size: 16px;
    font-family: 'BebasNeueBold';
    line-height: 1em;
    -webkit-transition: all .4s ease;
    transition: all .4s ease;
}
.btn:focus, .btn:active {
    outline: none;
}
/* generic modifiers */
.btn-block {
    display: block;
    text-align: center;
}
.btn--white {
    border-color: #ffffff;
    border-color: rgba(255, 255, 255, 0.7);
    color: white;
}
.btn--white.btn--outline {}
.btn--white.btn--outline:hover {
    border-color: white;
    background: white;
    color: #F53B49;
}
.btn--outline {
    border-width: 1px;
    border-style: solid;
    background: transparent;
}
.btn--outline:hover {}
.btn-red {
    margin-bottom: 2px;
    border: 1px solid transparent;
    border-radius: 50px;
    background: #F53B49;
    color: white;
    letter-spacing: 2.5px;
    font-size: 14px;
}
.btn-red:hover {
    border: 1px solid #F53B49;
    background: transparent;
    color: #F53B49;/* box-shadow: 0 0 0 2px $colorRed */
}
.btn-red.btn--outline {
    border-color: #F53B49;
    background: transparent;
    color: #181B1E;
}
.btn-white {
    border-radius: 50px;
    background: white;
}
.btn-muted {
    border-color: #DDDDDD;
    border-radius: 50px;
}
.btn-muted:hover, .btn-muted.active {
    border-color: #CACBD9;
    background: #DDDDDD;
}
.btn-black {
    background: #000;
    color: white;
}
.btn-black:hover {
    background: transparent;
    -webkit-box-shadow: 0 0 0 2px #F53B49;
            box-shadow: 0 0 0 2px #F53B49;
    color: #000;
    -webkit-transform: translate3d(0, -5px, 0);
            transform: translate3d(0, -5px, 0);
}
.btn-gray {
    background: #EDF0F6;
    color: #181B1E;
}
.btn-gray:hover {
    background: #CACBD9;
}
.btn-gray.btn--outline {
    border-color: #CACBD9;
    background: transparent;
}
.btn-gray.btn--outline:hover {
    background: #EDF0F6;
}
.btn--rounded {
    padding-right: 0;
    padding-left: 0;
    width: 38px;
    height: 38px;
    text-align: center;
}
.btn--noBr {
    border-radius: 0;
}
.owl-carousel .owl-prev, .owl-carousel .owl-next {
    position: absolute;
    top: 50%;
    width: 11px;
    height: 20px;
    background: url("data:image/svg+xml;charset=utf-8,%3C?xml version='1.0' encoding='UTF-8' standalone='no'?%3E %3Csvg width='11px' height='20px' viewBox='0 0 11 20' version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' fill='%23000'%3E %3C!-- Generator: Sketch 39.1 (31720) - http://www.bohemiancoding.com/sketch --%3E %3Ctitle%3Eleft_arrow_tech%3C/title%3E %3Cdesc%3ECreated with Sketch.%3C/desc%3E %3Cdefs/%3E %3Cg id='Desktop' stroke='none' stroke-width='1' fill-rule='evenodd'%3E %3Cg id='Sole_dskt_main' transform='translate(-76.000000, -2287.000000)'%3E %3Cg id='technology' transform='translate(76.000000, 2097.000000)'%3E %3Cpath d='M9.82704811,190.190212 C10.0906558,189.936596 10.5340888,189.936596 10.7976965,190.190212 C10.9264351,190.315039 10.9979565,190.483456 10.9979565,190.661779 C10.9979565,190.838122 10.9264351,191.006539 10.7976965,191.133347 L1.65521085,199.998019 L10.7976965,208.862691 C10.9264351,208.987517 11,209.155934 11,209.336239 C11,209.512582 10.9284785,209.679017 10.8017834,209.803844 C10.6730448,209.930652 10.4993498,210 10.313394,210 C10.1294817,210 9.95783021,209.930652 9.82909158,209.805825 L0.202303548,200.469586 C0.0735649266,200.344759 0,200.176342 0,199.998019 C0,199.819695 0.0715214564,199.651278 0.202303548,199.528433 L9.82704811,190.190212 Z' id='left_arrow_tech'/%3E %3C/g%3E %3C/g%3E %3C/g%3E %3C/svg%3E") no-repeat center;
    font-size: 0;
    -webkit-transition: background .4s ease;
    transition: background .4s ease;
    -webkit-transform: translateY(-50%);
        -ms-transform: translateY(-50%);
            transform: translateY(-50%);
}
/* ... */

